[tool.poetry]
name = "libraryproject-23"
version = "0.1.0"
description = ""
authors = ["Alexandra <a.chigrina89@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.1.0"
ipython = "^9.2.0"
redis = "^6.2.0"
gunicorn = "*"
django-redis = "*"
pillow = "^11.3.0"
flake8 = "^7.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
